# template-yolov8-clearml

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.v2  Makefile  README.md  pyproject.toml  requirements.txt  ruff.toml
src/: config.py  initizalization.py  params.py  train.py
src/data/: setup.py  util_timeout.py
src/data/converter/: coco2yolo.py
src/data/downloader/: base_downloader.py  downloader.py
src/data/downloader/method/: cvat.py  minio_dir.py  s3_dir.py
src/schema/: coco.py  params.py
src/utils/: clearml_settings.py  clearml_utils.py  general.py  logging.py  register_model.py
src/yolov8/: callbacks.py  clearml_logger.py  data.py  exporter.py  metrics_utils.py
tests/: test_critical_fixes.py
tests/yolov8/: __init__.py  test_clearml_logger.py  test_metrics_utils.py
