[project]
name = "template-yolov8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "albumentations==2.0.6",
    "clearml-agent==1.9.3",
    "clearml[s3]==1.18.0",
    "cvat-sdk==2.35.0",
    "httpx==0.28.1",
    "label-studio-converter>=0.0.59",
    "label-studio-sdk>=1.0.5",
    "minio>=7.2.15",
    "onnx>=1.17.0",
    "opencv-python-headless>=4.10.0.84",
    "openvino>=2025.1.0",
    "pillow>=11.2.1",
    "plotly==6.0.1",
    "pydantic==2.11.4",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "roboflow==1.1.63",
    "tqdm==4.67.1",
    "ultralytics==8.3.130",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.8",
]
