[project]
name = "template-yolov8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "albumentations==2.0.8",
    "clearml-agent==2.0.6",
    "clearml[s3]==2.1.2",
    "cvat-sdk==2.35.0",
    "httpx==0.28.1",
    "minio>=7.2.20",
    "onnx>=1.20.1",
    "openvino>=2025.4.1",
    "pandas>=2.2.0",
    "pillow>=12.1.0",
    "plotly==6.0.0",
    "pydantic==2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "roboflow==1.2.13",
    "tqdm==4.67.1",
    "ultralytics==8.4.7",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest",
    "pytest-cov",
    "ruff>=0.11.8",
]
